@@ -1,9 +1,9 @@
 package com.endstation.beveragemachine.service.core.usecase.ingredients;
 
 import com.endstation.beveragemachine.service.dataprovider.db.ingredients.IngredientsEntity;
+import com.endstation.beveragemachine.service.dataprovider.db.ingredients.IngredientsRepository;
 import com.endstation.beveragemachine.service.model.IngredientData;
 import com.endstation.beveragemachine.service.model.IngredientResponse;
-import com.endstation.beveragemachine.service.dataprovider.db.ingredients.IngredientsRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,10 +12,11 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Service
-public record IngredientsService(
-        IngredientsRepository ingredientsRepository) {
 
+@Service
+@RequiredArgsConstructor
+public class IngredientsService {
+    private final IngredientsRepository ingredientsRepository;
     public ResponseEntity<IngredientResponse> createIngredient(IngredientData ingredientData) {
 
         if (ingredientsRepository.existsByName(ingredientData.getName())) {
@@ -36,6 +37,6 @@ public record IngredientsService(
                         .name(ingredientsEntity.getName())
                         .liquidType(ingredientsEntity.getLiquidType())
                         .build())
-                .toList());
+                .collect(Collectors.toList()));
     }
 }
